--- a/components/Button/styles.module.scss
+++ b/components/Button/styles.module.scss
@@ -70,3 +70,16 @@
     }
   }
 }
+
+@media screen and (max-width: 560px) {
+  .wrapper {
+    width: var(--width-mobile);
+    height: 20.6px;
+    font-size: 2.25vw;
+    .cool_button {
+      width: var(--width-mobile);
+      height: 20.6px;
+      line-height: 20.6px;
+    }
+  }
+}
