--- a/layouts/Header/styles.module.scss
+++ b/layouts/Header/styles.module.scss
@@ -1,12 +1,15 @@
 .header {
-  width: calc(100% - 160px);
+  width: calc(100% - 11.1111111111vw);
   height: 84px;
-  padding: 0 80px;
+  padding: 0 5.55555555556vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-transform: uppercase;
   margin: 0 0 197px 0;
+  .hamburger {
+    display: none;
+  }
   ul {
     display: flex;
     align-items: center;
@@ -32,6 +35,9 @@
       background: #202124;
       border-radius: 50%;
     }
+    &.mobile {
+      display: none;
+    }
   }
   .buttons {
     display: flex;
@@ -52,14 +58,108 @@
       text-transform: uppercase;
       color: #202124;
     }
-    .getStarted {
-      font-family: 'IBM Plex Mono';
-      font-weight: 500;
-      font-size: 0.83333333333vw;
-      letter-spacing: 0.1em;
-      text-transform: uppercase;
-      background: #202124;
-      color: #ffffff;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .header {
+    width: calc(100% - 11.875vw);
+    height: 42px;
+    padding: 0 5.9375vw;
+    margin: 0 0 53px 0;
+    .hamburger {
+      display: block;
+      position: relative;
+      z-index: 4;
+      width: 17px;
+      height: 2px;
+      background: #1c1b1f;
+      cursor: pointer;
+      user-select: none;
+      &::after {
+        content: '';
+        position: absolute;
+        width: 17px;
+        height: 2px;
+        background: #1c1b1f;
+        top: -4px;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        width: 17px;
+        height: 2px;
+        background: #1c1b1f;
+        bottom: -4px;
+      }
+      &.opened {
+        background: none;
+        &::after {
+          transform: rotate(45deg);
+          top: 3px;
+        }
+        &::before {
+          transform: rotate(-45deg);
+          top: 3px;
+          bottom: -4px;
+        }
+      }
+    }
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 0.69444444444vw;
+      list-style: none;
+      & li {
+        font-family: 'IBM Plex Mono';
+        font-weight: 500;
+        font-size: 0.83333333333vw;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #000000;
+        cursor: pointer;
+        user-select: none;
+        img {
+          width: 7.5vw;
+          margin: 0;
+        }
+      }
+      .dot {
+        width: 2px;
+        height: 2px;
+        background: #202124;
+        border-radius: 50%;
+      }
+      &.mobile {
+        display: block;
+        position: absolute;
+        z-index: 3;
+        margin: 0;
+        background-color: #fff;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        padding: 100px 6.25vw 0 6.25vw;
+        li {
+          font-weight: 700;
+          font-size: 32px;
+          line-height: 150%;
+          img {
+            margin: 80px 0 0 0;
+          }
+        }
+      }
+      &.desktop {
+        display: none;
+      }
+    }
+    .buttons {
+      position: relative;
+      z-index: 4;
+      .signIn {
+        display: none;
+      }
     }
   }
 }
