Added media query for ContactUs modal

--- a/components/ContactUs/styles.module.scss
+++ b/components/ContactUs/styles.module.scss
@@ -74,7 +74,7 @@
       }
     }
     .wrapper {
-      width: 10.3472222222vw;
+      width: 100px;
       height: 34px;
       position: relative;
       right: 6px;
@@ -114,7 +114,7 @@
       }
       .cool_button {
         transition: all 0.1s ease-in-out;
-        width: 10.3472222222vw;
+        width: 100px;
         height: 34px;
         border: 1px solid transparent;
         background: #ffffff;
@@ -129,7 +129,7 @@
           font-size: 0.83333333333vw;
           letter-spacing: 0.1em;
           text-transform: uppercase;
-          width: 10.3472222222vw;
+          width: 100px;
           height: 34px;
         }
         &::before {
@@ -155,6 +155,86 @@
           right: -6px;
           bottom: -6px;
           transform: rotate(90deg);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .form {
+    .title {
+      font-size: 7.25vw;
+    }
+    .inputContainer {
+      gap: 7.5vw;
+      label {
+        font-size: 2.97222222222vw;
+        &::after {
+          right: -2.55555555555vw;
+          font-size: 2.69444444444vw;
+        }
+      }
+      input {
+        width: calc(36.3888888889vw - 3.33333333333vw);
+        height: 25px;
+        font-size: 1.97222222222vw;
+      }
+    }
+    .buttons {
+      .cancel {
+        width: 180px;
+        height: 20px;
+        font-size: 1.97222222222vw;
+      }
+      .wrapper {
+        width: 100px;
+        height: 24px;
+
+        .cool_button {
+          transition: all 0.1s ease-in-out;
+          width: 100px;
+          height: 24px;
+          border: 1px solid transparent;
+          background: #ffffff;
+          position: relative;
+          color: white;
+          .button {
+            cursor: pointer;
+            user-select: none;
+            border: none;
+            background: none;
+            font-weight: 500;
+            font-size: 1.97222222222vw;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            width: 100px;
+            height: 24px;
+          }
+          &::before {
+            content: '';
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-image: url('../../assets/images/right-top-corner-white.svg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            left: -6px;
+            bottom: -6px;
+            transform: rotate(180deg);
+          }
+          &::after {
+            content: '';
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-image: url('../../assets/images/right-top-corner-white.svg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            right: -6px;
+            bottom: -6px;
+            transform: rotate(90deg);
+          }
         }
       }
     }
