--- a/layouts/Footer/styles.module.scss
+++ b/layouts/Footer/styles.module.scss
@@ -101,6 +101,7 @@
         justify-content: space-between;
         text-align: center;
         div {
+          font-weight: 300;
           margin: 0;
           font-size: 3.125vw;
           line-height: 120%;
