--- a/components/ProductsPage/styles.module.scss
+++ b/components/ProductsPage/styles.module.scss
@@ -152,23 +152,21 @@
 
 @media screen and (max-width: 560px) {
   .container {
-    padding: 0;
+    overflow: hidden;
+    padding: 0 0 0 5vw;
     .title {
-      width: 100%;
-      text-align: center;
-      margin: 0 0 60px 0;
+      margin: 0 0 100px 0;
     }
     .ghostPage {
       padding: 0;
-      flex-direction: column-reverse;
-      justify-content: center;
-      align-items: center;
-      margin: 0 0 60px 0;
+      flex-direction: column;
+      align-items: baseline;
+      margin: 0 0 100px 0;
       img {
-        width: 80vw;
-        position: static;
+        width: 100vw;
+        position: relative;
         transform: none;
-        margin: 0 0 100px 0;
+        left: -50px;
       }
       .content {
         .firstTitle {
@@ -178,25 +176,23 @@
           font-size: 5.5vw;
         }
         p {
-          width: 80vw;
-          font-size: 3.5vw;
+          width: 90%;
+          font-size: 3.75vw;
         }
       }
     }
     .ghostVault {
       padding: 0;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin: 0 0 60px 0;
+      flex-direction: column-reverse;
+      align-items: baseline;
+      margin: 0 0 100px 0;
       img {
-        width: 80vw;
-        position: static;
+        width: 100vw;
+        position: relative;
         transform: none;
-        margin: 0 0 100px 0;
       }
       .content {
-        width: 80vw;
+        width: 100%;
         .firstTitle {
           font-size: 5.5vw;
         }
@@ -204,8 +200,8 @@
           font-size: 5.5vw;
         }
         p {
-          width: 80vw;
-          font-size: 3.5vw;
+          width: 90%;
+          font-size: 3.75vw;
         }
         div {
           margin: 0;
@@ -214,26 +210,27 @@
     }
     .playground {
       padding: 0;
-      flex-direction: column-reverse;
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;
+      align-items: baseline;
       margin: 0 0 60px 0;
       img {
         width: 80vw;
-        position: static;
+        position: relative;
         transform: none;
-        margin: 0 0 100px 0;
+        top: 20px;
       }
       .content {
+        width: 100%;
         .firstTitle {
           font-size: 5.5vw;
-        }
-        .secondTitle {
-          font-size: 5.5vw;
+          margin: 0 0 16px 0;
         }
         p {
-          width: 80vw;
-          font-size: 3.5vw;
+          width: 90%;
+          font-size: 3.75vw;
+        }
+        div {
+          margin: 0;
         }
       }
     }
