--- a/components/MainPage/styles.module.scss
+++ b/components/MainPage/styles.module.scss
@@ -424,6 +424,7 @@
         }
       }
       button {
+        font-family: 'IBM Plex Mono';
         cursor: pointer;
         user-select: none;
         width: 23.9583333333vw;
