--- a/components/Modal/styles.module.scss
+++ b/components/Modal/styles.module.scss
@@ -25,7 +25,7 @@
       right: 17px;
       width: 17.43px;
       height: 18.38px;
-      background-image: url('../../assets/images/close.svg');
+      background-image: url('../../public/images/close.svg');
       background-position: center;
       background-repeat: no-repeat;
       cursor: pointer;
