--- a/components/QuestionsAndAnswers/styles.module.scss
+++ b/components/QuestionsAndAnswers/styles.module.scss
@@ -24,7 +24,7 @@
       transform: translate(0, -50%);
       width: 24px;
       height: 12px;
-      background-image: url('../../assets/images/qaArrow.svg');
+      background-image: url('../../public/images/qaArrow.svg');
       background-position: center;
       background-repeat: no-repeat;
     }
@@ -37,7 +37,7 @@
         transform: translate(0, -50%) rotate(180deg);
         width: 24px;
         height: 12px;
-        background-image: url('../../assets/images/qaArrow.svg');
+        background-image: url('../../public/images/qaArrow.svg');
         background-position: center;
         background-repeat: no-repeat;
       }
