--- a/components/FeaturesPage/styles.module.scss
+++ b/components/FeaturesPage/styles.module.scss
@@ -15,6 +15,10 @@
   font-family: 'IBM Plex Mono';
   text-transform: uppercase;
   thead {
+    position: sticky;
+    top: -3px;
+    background-color: #ffffff;
+    box-shadow: 0px 19px 45px -25px rgba(0, 0, 0, 0.093);
     td {
       border: 1.64148px dashed #595959;
       height: 124px;
