--- a/components/PricingBlock/styles.module.scss
+++ b/components/PricingBlock/styles.module.scss
@@ -15,6 +15,11 @@
     background: #f9f9f9;
     display: flex;
     align-items: center;
+    position: sticky;
+    top: -3px;
+    background-color: #ffffff;
+    box-shadow: 0px 19px 45px -25px rgba(0, 0, 0, 0.036);
+    z-index: 1;
     .tabs {
       display: flex;
       margin: 0 8.54166666667vw 0 0;
