--- a/components/FeaturesPage/styles.module.scss
+++ b/components/FeaturesPage/styles.module.scss
@@ -94,6 +94,17 @@
         &.content {
           font-weight: 500;
           font-size: 1.9vw;
+          &.button {
+            div {
+              top: 0;
+              &::before {
+                display: none;
+              }
+              &::after {
+                display: none;
+              }
+            }
+          }
         }
       }
     }
